# niti-chelovechestva

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/generator/: __init__.py  config.py  events.py  events.yaml  genealogy.py  geography.py  migration.py  population.py  spawn.py
backend/pipeline/: __init__.py  aggregate.py  export.py  generate.py  local_generate.py  spark_generate.py
docs/: README.md  architecture.md  art-statement.md  data-model.md  methodology.md  metrics.md  online-deploy.md  wsl-lan-deploy.md
frontend/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: DataBadge.tsx  EventTicker.tsx  Globe.tsx  Header.tsx  IntroOverlay.tsx  Legend.tsx  LineageExplorer.tsx  StatusBar.tsx  TimeSlider.tsx
frontend/src/data/: interpolation.ts  loader.ts
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/i18n/: contentRu.ts  eventsRu.ts
frontend/src/layers/: earthLayers.ts  lineageThreadsLayer.ts  migrationArcsLayer.ts  populationHexLayer.ts
frontend/src/store/: useData.ts  useLayers.ts  useLineage.ts  useTime.ts
frontend/src/styles/: index.css
frontend/src/utils/: colors.ts  easing.ts
scripts/: encode-demo-gif.ps1
