[project]
name = "threads-of-humanity-backend"
version = "0.1.0"
description = "Big-data pipeline for the Threads of Humanity data-art project"
requires-python = ">=3.10"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
